# gptancial

./: .gitignore  Dockerfile  README.md  pyproject.toml
gptancial/: __init__.py  app.py  config.py
gptancial/analytics/: __init__.py  logic.py  openai.py
gptancial/data/: __init__.py  esg.py  format.py  fundamentals.py  parser.py  price.py  sentiment.py  symbols.py
gptancial/templates/: index.html
