[tool.poetry]
name = "gptancial"
version = "0.1.0"
description = ""
authors = ["João Carlota <joao.carlota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
fmpsdk = "^20230312.0"
environs = "^9.5.0"
openai = "^0.27.6"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
